# secret_lottery

./: .editorconfig  .env.example  .gitignore  Cargo.toml  Makefile  README.md  note.md  package-lock.json  package.json  tsconfig.json
scripts/: create_secret_box.sh  execute_test.ts  instantiate.js  instantiate.ts  note.md  package-lock.json  package.json  query_test.ts  store.js  store.ts  write2env.js  write2env.ts
scrt_lottery_react_app/: .env.example  package-lock.json  package.json
scrt_lottery_react_app/src/: App.tsx  index.tsx
scrt_lottery_react_app/src/components/: Loading.tsx  Lottery.tsx  ParticipantsTable.tsx
scrt_lottery_react_app/src/services/: SecretNetworkLottery.ts
scrt_lottery_react_app/src/styles/: Theme.ts
scrt_lottery_react_app/src/utils/: SecretNetworkLotteryHelpers.ts
src/: contract.rs  error.rs  msg.rs  state.rs
