[package]
name = "lottery_smart_contract1"
version = "0.1.0"
authors = ["Me"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
default = []
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
# backtraces = ["cosmwasm-std/backtraces"]
backtraces = ["cosmwasm-std/backtraces"]
schema = ["cosmwasm-schema"]

[dependencies]
# cosmwasm-std = { git = "https://github.com/scrtlabs/cosmwasm", tag = "v1.1.11-secret" }
# # cosmwasm-std = { version = "1.5.8" }
# cosmwasm-storage = { git = "https://github.com/scrtlabs/cosmwasm", tag = "v1.1.11-secret" }
# # cosmwasm-storage = { version = "1.5.8" }
# schemars = "0.8.8"
# serde = { version = "1.0.114", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.31" }
# # cw-storage-plus = { version = "1.1.0", default-features = false }
# # Check if cw-storage-plus has a specific branch or commit for the secret version
# # cw-storage-plus = { git = "https://github.com/cosmwasm/cw-storage-plus", tag = "v0.16.0" } # Replace with the correct tag/branch if necessary
# # cosmwasm-std = { version = "2.1.4" }
# # cosmwasm-storage = { version = "1.5.2" }
# # secret-storage-plus = { git = "https://github.com/securesecrets/secret-plus-utils", version = "0.13.4" }
# # cw-storage-plus = { version = "1.1.0", default-features = false }
# secret-toolkit = { version = "0.10.0", default-features = false, features = [
#     "viewing-key",
#     "crypto",
#     "permit",
#     "storage",
#     "utils",
#     "snip20",
# ] }
cosmwasm-schema = { version = "1.1.0", optional = true }
cosmwasm-std = { package = "secret-cosmwasm-std", version = "1.1.10", features = [
    "stargate",
] }
cosmwasm-storage = { package = "secret-cosmwasm-storage", version = "1.0.0" }
schemars = "0.8.11"
secret-toolkit = { version = "0.10.0", default-features = false, features = [
    "utils",
    "storage",
    "serialization",
    "viewing-key",
    "permit",
] }
serde = { version = "1.0.144", default-features = false, features = ["derive"] }
serde-json-wasm = "1.0.0"
sha3 = "0.10.4"
base64 = "0.21.0"
secret-toolkit-serialization = { version = "0.10.0", features = ["base64"] }
anybuf = { version = "0.5.0" }
# snafu = { version = "0.7.1" }
# thiserror = { version = "1.0.31" }
tnls = { git = "https://github.com/SecretSaturn/TNLS", branch = "main", package = "secret_gateway", default-features = false }

# [dev-dependencies]
# cosmwasm-schema = { version = "2.1.4" }

# Uncomment these for some common extra tools
# secret-toolkit = { git = "https://github.com/scrtlabs/secret-toolkit", tag = "v0.8.0" }
# cw-storage-plus = { version = "1.1.0", default-features = false }

# [patch.crates-io]
# uncomment this if you use cw-storage-pluss
# cosmwasm-std = { git = "https://github.com/scrtlabs/cosmwasm", tag = "v1.1.11-secret" }
# cosmwasm-std = { version = "1.5.8" }
# cw-storage-plus = { git = "https://github.com/scrtlabs/cw-storage-plus", tag = "v1.0.0" }

[[bin]]
name = "schema"
required-features = ["schema"]
